# dotfiles

./: .gitignore  README.md  install.conf.yaml  justfile
conda/.conda/: environments.txt
git/: .gitconfig
homebrew/: 01_install-homebrew.zsh  02_install-homebrew-packages.zsh  03_install-oh-my-zsh.zsh  Brewfile  install-homebrew-apps.zsh  install-homebrew-packages.zsh  install-oh-my-zsh-plugins.zsh  install-oh-my-zsh.zsh  install.zsh
homebrew/apps/: apple.zsh  automation.zsh  backup.zsh  browser.zsh  media.zsh  messages.zsh  productivity.zsh  programming.zsh  system.zsh  uni.zsh  utils.zsh
install/: 01_macos.zsh  02_homebrew.zsh  02_stow.zsh  02_symlinks.zsh  03_homebrew.zsh  04_oh-my-zsh-plugins.zsh  04_stow.zsh  06_directory_structure.zsh  07_perl.zsh
install/homebrew/: apps.zsh  packages.zsh
install/macos/: setup.zsh
karabiner/: karabiner-template.json  karabiner.json
karabiner/.config/karabiner/: karabiner.json
karabiner/.config/karabiner/automatic_backups/: karabiner_20220713.json
karabiner/automatic_backups/: karabiner_20221023.json
macos/: cleanup.zsh  duti.config  macos_preferences.zsh  main.zsh  setup.zsh
macos/domains/: desktop.zsh  disk-images.zsh  dock.zsh  finder.zsh  global.zsh  launch.zsh  sound.zsh  time-machine.zsh  trackpad.zsh
not-synced/: envrc  eslint.yaml  eslintrc.yaml  package.jsonc  pre-commit-config.yaml  prettierrc.yaml  pyproject.toml  sqlfluff  tailwind.config.cjs  tsconfig.json
not-synced/components/dark-mode-toggle/: dark-mode-toggle.ts
not-synced/github-actions/: actions-docs.yaml  actions-pre-commit.yaml  actions-pytest.yaml  actions-ruff.yaml  deployment-docker-hub.yaml  docs.yaml  pre-commit-go-typescript.yaml  pre-commit-python.yaml  testing-go.yaml
not-synced/gitignore/: gitignore-python  gitignore-python.md  gitignore-typescript.md
not-synced/go/: zerolog.go
not-synced/justfiles/: justfile-deploy  justfile-go  justfile-web
not-synced/python/: logging_rich.py  progress_bar_rich.py
not-synced/windows/: hotkeys.ahk
obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  hotkeys.json
obsidian/Documents/ObsidianVault/.obsidian/: appearance.json  community-plugins.json  core-plugins-migration.json  hotkeys.json
obsidian/Documents/ObsidianVault/.obsidian/plugins/obsidian-icon-folder/: data.json
obsidian/Documents/ObsidianVault/.obsidian/plugins/obsidian-minimal-settings/: data.json
obsidian/Documents/ObsidianVault/.obsidian/snippets/: obsidian.css
obsidian/plugins/advanced-toolbar/: data.json
obsidian/plugins/cmdr/: data.json
obsidian/plugins/customizable-menu/: data.json
obsidian/plugins/darlal-switcher-plus/: data.json
obsidian/plugins/dataview/: data.json
obsidian/plugins/embed-code-file/: data.json
obsidian/plugins/nldates-obsidian/: data.json
obsidian/plugins/number-headings-obsidian/: data.json
obsidian/plugins/obsidian-advanced-uri/: data.json
obsidian/plugins/obsidian-better-command-palette/: data.json
obsidian/plugins/obsidian-bulk-rename-plugin/: data.json
obsidian/plugins/obsidian-filename-heading-sync/: data.json
obsidian/plugins/obsidian-git/: data.json
obsidian/plugins/obsidian-hider/: data.json
obsidian/plugins/obsidian-icon-folder/: data.json
obsidian/plugins/obsidian-linter/: data.json
obsidian/plugins/obsidian-minimal-settings/: data.json
obsidian/plugins/obsidian-outliner/: data.json
obsidian/plugins/obsidian-style-settings/: data.json
obsidian/plugins/obsidian-table-to-csv-exporter/: data.json
obsidian/plugins/obsidian-vault-statistics-plugin/: data.json
obsidian/plugins/obsidian-zotero-desktop-connector/: data.json
obsidian/plugins/periodic-notes/: data.json
obsidian/plugins/simple-embeds/: data.json
obsidian/plugins/templater-obsidian/: data.json
obsidian/snippets/: obsidian.css
r/: .Rprofile
rstudio/: desktop.ini  rstudio-prefs.json
rstudio/.config/rstudio/: rstudio-prefs.json
rstudio/.config/rstudio/CustomThemes/: TomorrowNightBright.tmTheme
rstudio/.config/rstudio/keybindings/: addins.json  addins.json.bak  editor_bindings.json
rstudio/.config/rstudio/snippets/: markdown.snippets  r.snippets
rstudio/.config/rstudio/themes/: Cobalt2.rstheme  nautical-twilight.rstheme
rstudio/CustomThemes/: Cobalt2.tmTheme
rstudio/keybindings/: rstudio_bindings.json
rstudio/snippets/: custom.css
scripts/: 01_symlinks.zsh  02_homebrew.zsh  02_symlinks.zsh  03_oh-my-zsh.zsh  04_oh-my-zsh-plugins.zsh  04_stow.zsh  05_perl.zsh  06_macos.zsh  06_vscode-extensions.zsh  07_macos.zsh  07_perl.zsh
scripts/homebrew/: Brewfile  nerd-fonts.zsh  packages.zsh
scripts/macos/domains/: disk-images.zsh  time-machine.zsh  trackpad.zsh
starship/: starship.toml
starship/.config/: starship.toml
stow/: install.zsh
templates/: LICENSE.md  air.toml  fly.toml  golangci.yaml  mkdocs.yaml  package.jsonc  pre-commit-config.yaml  pyproject.toml  sourcery.yaml  sqlfluff
templates/components/dark-mode-toggle/: dark-mode-toggle.html
templates/github-actions/: ruff.yaml  testing-python.yaml
templates/gitignore/: gitignore-python  gitignore-r.md
templates/go/: echo.go
templates/windows/: hotkeys.ahk  vscode-keybindings.json
vscode/: extensions.txt  keybindings.json  projects.json  settings.json
vscode/globalStorage/alefragnani.project-manager/: projects.json
vscode/snippets/: css.json  global.code-snippets  javascript.json  latex.json  markdown.json  python.json  r.json  rmd.json  shellscript.json
warp/: keybindings.yaml  settings.toml
warp/.warp/: keybindings.yaml
warp/.warp/workflows/: modify_the_most_recent_commit_message.yaml  set_upstream_branch.yaml
warp/workflows/: update_git_user_mail.yaml
zsh/: .p10k.zsh  .z  .zsh_history  .zshenv  .zshrc
zsh/config/: bun.zsh  go.zsh  iterm.zsh  just.zsh  powerlevel10k.zsh  starship.zsh  tex.zsh
zsh/zshrc/: aliases.zsh  bun.zsh  conda.zsh  config.zsh  env.zsh  go.zsh  hatch.zsh  ohmyzsh.zsh  perl.zsh  pipx.zsh  pixi.zsh  plugins.zsh  pnpm.zsh  powerlevel10k.zsh  pyenv.zsh  ruff.zsh  tex.zsh
(+3 files in other folders)
